# sessions-pomodoro

./: README.md  dev_store.json
.github/workflows/: general.yml  release.yml
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: general.yml
src-tauri/capabilities/: default.json
src-tauri/migrations/01-create_states/: up.sql
src-tauri/migrations/2024-01-14-131959_create_states/: up.sql
src-tauri/src/: application_context.rs  configuration.rs  db.rs  env_variables.rs  lib.rs  main.rs  schema.rs  sessions.rs
src-tauri/src/configuration/: load.rs  load_settings.rs  mod.rs  model.rs
src-tauri/src/db/: db_init.rs  db_migrate.rs  history_db.rs  mod.rs  sample_data.rs  working_cycle_db.rs
src-tauri/src/history/: facade.rs  history_calculator.rs  history_context.rs  mod.rs  states_listing.rs
src-tauri/src/sessions/: mod.rs  sessions_cycle.rs  state_trait.rs
src-tauri/src/settings/: load_settings.rs  mod.rs
src-tauri/src/work_cycle/: application_context.rs  facade.rs  mod.rs  sessions_cycle.rs  states.rs  work_cycle_context.rs  work_cycle_manager.rs
src-tauri/src/work_cycle/states/: break_time_state.rs  long_break_time_state.rs  mod.rs  nothing_state.rs  state_trait.rs  state_traits.rs  states_old.rs  working_time_state.rs
src-tauri/tests/: application_context_test.rs
src-tauri/tests/integrations/: application_context_test.rs  helpers.rs  history_context_test.rs  init_db_test.rs  main.rs  settings_test.rs  work_cycle_context_test.rs
ui/: package-lock.json  package.json  svelte.config.js
ui/src/lib/: Calendar.svelte  Greet.svelte  Timer.svelte
ui/src/routes/: +page.svelte
