[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
uuid = { version = "1.6.1", features = ["v4"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
assertor = "0.0.2"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"] }
dirs = "5.0.1"
mockall = "0.12.1"
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.8"
rusqlite = { version = "0.30.0", features = ["chrono"] }
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
include_dir = "0.7.3"
lazy_static = "1.4.0"
random-string = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
