[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["bsjhx <rakoczymichal@hotmail.com>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.90.0"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
assertor = "0.0.4"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
mockall = "0.13.1"
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.8"
rusqlite = { version = "0.30.0", features = ["chrono"] }
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
include_dir = "0.7.4"
lazy_static = "1.5.0"
random-string = "1.1.0"
dotenvy = "0.15"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
